# Neural-Network-in-Rust

./: .gitignore  Cargo.toml  Gemini CLI.md  README.md  github-copilot.md
src/: lib.rs  main.rs
src/gui/: bottom_panel.rs  controls.rs  layout.rs  layout_manager.rs  left_panel.rs  mod.rs  renderer.rs  test.rs  theme.rs
src/mnist/: idx.rs  mod.rs  parser.rs
src/nn/: activation.rs  cost.rs  forw_prop.rs  layer.rs  mod.rs  network.rs
tests/: activation_test.rs  back_prop.rs  cost_test.rs  forw_prop.rs  mnist_test.rs  network_test.rs
